--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   "homepage": "https://github.com/donkeysmash/nutella#readme",
   "dependencies": {
     "express": "^4.13.3",
+    "lodash": "^3.10.1",
     "pg": "^4.4.3",
     "pg-hstore": "^2.3.2",
+    "repeat": "0.0.6",
+    "request": "^2.65.0",
     "sequelize": "^3.12.2"
   }
 }
