--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nutella",
   "version": "0.0.1",
-  "description": "TTC Logger",
+  "description": "Pomodoro-Todos",
   "main": "server.js",
   "directories": {
     "test": "test"
@@ -22,12 +22,11 @@
   "homepage": "https://github.com/donkeysmash/nutella#readme",
   "dependencies": {
     "bluebird": "^3.0.1",
+    "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "lodash": "^3.10.1",
     "pg": "^4.4.3",
     "pg-hstore": "^2.3.2",
-    "repeat": "0.0.6",
-    "request": "^2.65.0",
     "sequelize": "^3.12.2"
   }
 }
