--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "username": "kenlee",
+    "username": "Dave",
     "password": null,
     "database": "PomodoroDB",
     "host": "localhost",
