--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   },
   "homepage": "https://github.com/donkeysmash/nutella#readme",
   "dependencies": {
+    "babel-preset-react": "^6.3.13",
     "bluebird": "^3.0.1",
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "lodash": "^3.10.1",
     "pg": "^4.4.3",
     "pg-hstore": "^2.3.2",
+    "react": "^0.14.5",
+    "react-dom": "^0.14.5",
     "sequelize": "^3.12.2"
   }
 }
