--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "bluebird": "^3.0.1",
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
+    "flux": "^2.1.1",
+    "jquery": "^2.1.4",
+    "keymirror": "^0.1.1",
     "lodash": "^3.10.1",
     "pg": "^4.4.3",
     "pg-hstore": "^2.3.2",
