--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "pg-hstore": "^2.3.2",
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
-    "sequelize": "^3.12.2"
+    "sequelize": "^3.12.2",
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
     "jsx-loader": "^0.13.2",
