added basic structure for react

--- a/package.json
+++ b/package.json
@@ -27,17 +27,27 @@
     "babel-preset-react": "^6.3.13",
     "bluebird": "^3.0.1",
     "body-parser": "^1.14.2",
+    "bootstrap": "^3.3.6",
+    "bootstrap-loader": "^1.0.2",
+    "bootstrap-sass": "^3.3.6",
+    "css-loader": "^0.23.1",
     "express": "^4.13.3",
+    "file-loader": "^0.8.5",
     "flux": "^2.1.1",
     "jquery": "^2.1.4",
     "keymirror": "^0.1.1",
     "lodash": "^3.10.1",
+    "node-sass": "^3.4.2",
     "pg": "^4.4.3",
     "pg-hstore": "^2.3.2",
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
+    "resolve-url-loader": "^1.4.3",
+    "sass-loader": "^3.1.2",
     "sequelize": "^3.12.2",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7"
   },
   "devDependencies": {
     "jsx-loader": "^0.13.2",
